<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- Toolbar reutilizable -->
    <include layout="@layout/toolbar" />


    <!-- Contenido scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:divider="@drawable/space_18dp"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:showDividers="middle">

            <!-- Título -->
            <TextView
                android:id="@+id/txt_titleRegistrarSocio"
                style="@style/TitleStyle"
                android:text="@string/recibo_txt_title" />

            <!-- Campo Nombre -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPaddingTop="50dp"
                app:contentPaddingBottom="50dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                android:layout_marginHorizontal="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/space_36dp"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/txtFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recibo_txt_fecha"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtDni"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recibo_txt_dni"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtFechaInscripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recibo_txt_inscripcion"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtFormaPago"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recibo_txt_formadepago"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtMonto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recibo_txt_monto"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/recibo_btn_imprimir"
                style="@style/ButtonStyle"
                android:layout_marginHorizontal="20dp"
                android:text="@string/recibo_btn_imprimir"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
