<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- Toolbar reutilizable -->
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:divider="@drawable/space_18dp"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:showDividers="middle">

            <!-- Título (cambiar dinámicamente) -->
            <TextView
                android:id="@+id/registrarCliente_txt_title"
                style="@style/TitleStyle"
                android:text="@string/registrarCliente_txt_registrarCliente" />

            <!-- Campo Nombre -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrarCliente_et_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarCliente_et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="25" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo Apellido -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrarCliente_et_apellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarCliente_et_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo DNI -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrarCliente_et_dni">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarCliente_et_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha de nacimiento -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrarCliente_et_fechaNacimiento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarCliente_et_fechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha de inscripción -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrarCliente_et_fechaInscripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarCliente_et_fechaInscripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Checkbox -->
            <CheckBox
                android:id="@+id/registrarCliente_cb_aptoFisico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registrarCliente_cb_entregoAptoFisico"/>

            <!-- Botones -->
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/registrarCliente_btn_aceptar"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/registrarCliente_btn_aceptar"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/registrarCliente_btn_limpiar"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/registrarCliente_btn_limpiar"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
