<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- Toolbar reutilizable -->
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:divider="@drawable/space_18dp"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:showDividers="middle">

            <!-- Título -->
            <TextView
                android:id="@+id/txt_titleRegistrarSocio"
                style="@style/TitleStyle"
                android:text="@string/pagarcuota_txt_title" />

            <!-- Campo DNI -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carnet_hint_dni">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pagarcuota_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Radio Buttons para forma de pago -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/carnet_rb_efectivo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pagarcuota_rb_efectivo" />

                <RadioButton
                    android:id="@+id/carnet_rb_tarjeta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pagarcuota_rb_tarjeta" />
            </RadioGroup>

            <!-- Botón para pagar -->
            <Button
                android:id="@+id/pagarcuota_btn_pagar"
                style="@style/ButtonStyle"
                android:text="@string/pagarcuota_btn_pagar" />

            <!-- Contenedor recibo oculto inicialmente -->
            <androidx.cardview.widget.CardView
                android:id="@+id/recibo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPaddingBottom="30dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/space_18dp"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/recibo_txt_contenido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:lineSpacingExtra="8dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/pagarCuota_btn_generarPdf"
                style="@style/ButtonStyle"
                android:layout_marginTop="12dp"
                android:text="@string/pagarCuota_btn_descargarPdf"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
