<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!-- Toolbar reutilizable -->
    <include layout="@layout/toolbar" />

    <!-- Contenido scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp"
            android:paddingBottom="80dp"
            android:divider="@drawable/space_18dp"
            android:showDividers="middle">

            <!-- Título -->
            <TextView
                android:id="@+id/carnet_txt_title"
                style="@style/TitleStyle"
                android:text="@string/carnet_txt_title" />

            <!-- Campo DNI -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carnet_hint_dni">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carnet_et_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón Generar -->
            <Button
                android:id="@+id/carnet_btn_generar"
                style="@style/ButtonStyle"
                android:text="@string/generarcarnet_btn_generar"
                android:layout_marginTop="12dp" />

            <!-- Carnet (inicialmente oculto) -->
            <androidx.cardview.widget.CardView
                android:id="@+id/carnet_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPaddingTop="40dp"
                app:contentPaddingBottom="40dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="8dp">

                <TextView
                    android:id="@+id/carnet_txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:lineSpacingExtra="8dp" />
            </androidx.cardview.widget.CardView>


            <!-- Botón Imprimir -->
            <Button
                android:id="@+id/carnet_btn_imprimir"
                style="@style/ButtonStyle"
                android:text="@string/carnet_btn_imprimir"
                android:layout_marginTop="12dp"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
